send registered users

--- a/views/user.pug
+++ b/views/user.pug
@@ -11,7 +11,7 @@ block layout-content
       a(href="/")
         div.NavButton Home
       header 
-      h1 Welcome #{user.nickname}
+      h1 ID: #{user.nickname}
       img(src=user.picture)
       h2 User's JWT
       p #{user.id_token}
